MDEV-13570 Assertion failure !srv_read_only_mode in --innodb-read-only shutdown when buf_resize_thread is active

logs_empty_and_mark_files_at_shutdown(): Skip the debug assertion
when the buf_resize_thread is active.